# timbreAMT

./: .gitignore  README.md  README.zh.md  pyproject.toml  requirements.txt
Tanaka/: README.md  tanaka.py  train_on_musicnet.ipynb
basicamt/: README.md  __init__.py  basicamt.loss.txt  basicamt.pth  basicamt.py  basicamt_all.loss.txt  basicamt_all.pth  basicamt_model.pth  best_basicamt.pth  best_basicamt_all.pth  best_basicamt_model.pth  train_basicamt.ipynb  train_basicamt2.ipynb  train_basicamt_musicnet.ipynb  use_model.ipynb
basicpitch/: README.md  basicpitch.loss.txt  basicpitch.pth  basicpitch.py  basicpitch_model.pth  best_basicpitch.pth  calc_cqt.ipynb  loss.py  train_basicpitch.ipynb  train_basicpitch2.ipynb  train_basicpitch_musicnet.ipynb
data/: README.md  testCQT.ipynb
evaluate/: README.md  bach10.ipynb  eval_basicamt.ipynb  eval_basicamt_BCE.ipynb  eval_basicamt_batchnorm.ipynb  eval_basicamt_layernorm.ipynb  eval_basicamt_learnableCQT.ipynb  eval_basicamt_noDilation.ipynb  eval_basicamt_nolog.ipynb  eval_basicpitch.ipynb  eval_basicpitch_raw.ipynb  eval_onsetsAndFrames.ipynb  eval_result.xlsx  eval_septimbre.ipynb  eval_septimbre_diceph.ipynb  eval_septimbre_layernorm.ipynb  eval_septimbre_orthogonal.ipynb  eval_septimbre_rescale.ipynb  eval_tanaka.ipynb  findThreshold.ipynb  instrument_agnostic_eval_utils.py  phenicx.ipynb  timbre_sepatate_eval_utils.py  urmp.ipynb
model/: CQT.py  README.md  attention.py  config.py  config.toml  denseconv.py  layers.py  loss.py  memory.md  testSparse.ipynb  testfiltfilt.ipynb
onsets_frames/: README.md  constants.py  (+4 more)
(+108 files in other folders)
