[project]
name = "timbreamt"
version = "0.1.0"
description = "lightweight AMT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "torchaudio>=2.6",
    "torchcodec",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "scikit-learn>=1.7.2",
    "mido>=1.2.10",
    "tqdm>=4.66.5",
    "mirdata>=0.3.9",
    "mir_eval>=0.8.0",
    "ipykernel",
    # onnx export, to enable web inference
    "onnx",
    "onnxruntime",
    "onnxscript",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
